--- a/src/pages/play-page/play-page.html
+++ b/src/pages/play-page/play-page.html
@@ -14,8 +14,8 @@
 
 
 <ion-content padding>
-    <img src="{{thumb}}" />
-    <h2>Playing {{title}}</h2>
+    <img height="250px" src="{{thumb}}" />
+    <h2 style="text-align: center" >{{title}}</h2>
     <!-- <div id="container"> -->
     <ion-row align-items-center>
     <ion-icon (click)="backward()" name="rewind"></ion-icon>
